tests/error/void_type_in_struct.c
// fail "Cannot declare a struct member with type void."

struct{
    void asd;
};
